--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       ME_CONFIG_MONGODB_SERVER: mongodb
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:6.2.0
     container_name: zookeeper
     environment:
       ZOOKEEPER_SERVER_ID: 1
@@ -64,7 +64,7 @@ services:
       - microservices-net
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:6.2.0
     container_name: ms_kafka
     ports:
       - 9092:9092
@@ -95,3 +95,4 @@ volumes:
   postgres:
   pgadmin:
   mongo:
+  ollama_data:
